--- a/lesson2-download.ipynb
+++ b/lesson2-download.ipynb
@@ -774,31 +774,33 @@
    ],
    "source": [
     "#cell 10\n",
-    "learn.fit_one_cycle(4)\n",
-    "\"\"\"\n",
-    "Here is our old, dear friend, 'fit_one_cycle'. Here is our reminder of what it's inner mind looks like;\n",
-    "    def fit_one_cycle(learn:Learner, cyc_len:int, max_lr:Union[Floats,slice]=defaults.lr,\n",
-    "                  moms:Tuple[float,float]=(0.95,0.85), div_factor:float=25., pct_start:float=0.3, final_div:float=None,\n",
-    "                  wd:float=None, callbacks:Optional[CallbackList]=None, tot_epochs:int=None, start_epoch:int=None)->None:\n",
+    "learn.fit_one_cycle(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Here is our old, dear friend, 'fit_one_cycle'. Here is our reminder of what it's inner mind looks like;**\n",
+    "\n",
+    "  > `def fit_one_cycle(learn:Learner, cyc_len:int, max_lr:Union[Floats,slice]=defaults.lr, \n",
+    "                      moms:Tuple[float,float]=(0.95,0.85), div_factor:float=25., \n",
+    "                      pct_start:float=0.3, final_div:float=None, \n",
+    "                      wd:float=None, callbacks:Optional[CallbackList]=None, tot_epochs:int=None,\n",
+    "                      start_epoch:int=None)->None:\n",
     "    \"Fit a model following the 1cycle policy.\"\n",
     "    max_lr = learn.lr_range(max_lr)\n",
     "    callbacks = listify(callbacks)\n",
-    "    callbacks.append(OneCycleScheduler(learn, max_lr, moms=moms, div_factor=div_factor, pct_start=pct_start,\n",
-    "                                       final_div=final_div, tot_epochs=tot_epochs, start_epoch=start_epoch))\n",
-    "    learn.fit(cyc_len, max_lr, wd=wd, callbacks=callbacks\n",
+    "    callbacks.append(OneCycleScheduler(learn, max_lr, moms=moms, div_factor=div_factor, \n",
+    "                                        pct_start=pct_start,final_div=final_div, \n",
+    "                                        tot_epochs=tot_epochs, start_epoch=start_epoch))\n",
+    "    learn.fit(cyc_len, max_lr, wd=wd, callbacks=callbacks)`\n",
     "\n",
-    "Abriged version; we tell it we want to run this function 4 times, using these default learning rates. Then it takes these rates\n",
-    "and cycles through them using the annealing method to increase the learning rate as we go along and then decrease it after\n",
-    "we reach the specified maximum in this function.\n",
-    "We also use the weight method, which calculates the effects of the previously used learning rate and adds it to the calculations\n",
-    "of the next tried learning rate.\n",
-    "The other arguments you see in here and just default settings to help calcuate the learning rate anneal function. These \n",
-    "numbers were just emperically tested in practice and were shown to be quite reasonable and useful in almost all instance.\n",
-    "What's good for them is good enough for me and hopefully you. We will find new numbers when we look for new learning rates after\n",
-    "unfreezing the rest of the layers in the next few cells.\n",
+    "**Abridged version; we tell it we want to run this function 4 times, using these default learning rates. Then it takes these rates and cycles through them using the annealing method to increase the learning rate as we go along and then decrease it after we reach the specified maximum in this function.**\n",
     "\n",
+    "**We also use the weight method, which calculates the effects of the previously used learning rate and adds it to the calculations of the next tried learning rate.**\n",
     "\n",
-    "\"\"\""
+    "**The other arguments you see in here and just default settings to help calculate the learning rate anneal function. These numbers were just empirically tested in practice and were shown to be quite reasonable and useful in almost all instance. What's good for them is good enough for me and hopefully you. We will find new numbers when we look for new learning rates after unfreezing the rest of the layers in the next few cells.**"
    ]
   },
   {
